@@ -51,6 +51,7 @@ import android.view.View.OnKeyListener;
 import android.view.View.OnLongClickListener;
 import android.view.View.OnTouchListener;
 import android.view.ViewGroup;
+import android.view.ViewParent;
 import android.view.animation.Animation;
 import android.view.animation.AnimationSet;
 import android.view.inputmethod.InputMethodManager;
@@ -90,10 +91,13 @@ public abstract class TiUIView
 	// rather than starting the next animation always from scale 1.0f (i.e., normal scale).
 	// This gives us parity with iPhone for scale animations that use the 2-argument variant
 	// of Ti2DMatrix.scale().
-	private Pair<Float, Float> animatedScaleValues = Pair.create(new Float(1f), new Float(1f)); // default = full size (1f)
+	private Pair<Float, Float> animatedScaleValues = Pair.create(Float.valueOf(1f), Float.valueOf(1f)); // default = full size (1f)
 
 	// Same for rotation animation.
 	private float animatedRotationDegrees = 0f; // i.e., no rotation.
+
+	// Same for translate animation.
+	private Pair<Integer, Integer> animatedXYTranslationValues = Pair.create(Integer.valueOf(0), Integer.valueOf(0));
 
 	private KrollDict lastUpEvent = new KrollDict(2);
 	// In the case of heavy-weight windows, the "nativeView" is null,
@@ -252,6 +256,21 @@ public abstract class TiUIView
 				Log.d(LCAT, "starting animation: "+as);
 			}
 			nativeView.startAnimation(as);
+
+			// If the view has negative left/top and therefore might be "off-screen", then Android might not
+			// animate it immediately because by default it animates "on first frame" and apparently "first frame"
+			// won't happen right away if the view isn't yet visible.
+			// In that case invalidate its parent, which will kick off the pending animation.
+			ViewParent viewParent = nativeView.getParent();
+			if (viewParent instanceof View) {
+				View parent = (View) viewParent;
+
+				if (nativeView.getTop() < 0 || nativeView.getLeft() < 0 || nativeView.getTop() >= parent.getHeight()
+					|| nativeView.getLeft() >= parent.getWidth()) {
+					parent.invalidate();
+				}
+			}
+
 			// Clean up proxy
 			proxy.clearAnimation(builder);
 		}
@@ -1295,7 +1314,6 @@ public abstract class TiUIView
 	/**
 	 * Store the animated x and y scale values (i.e., the scale after an animation)
 	 * since Android provides no property for looking them up.
-	 * looking it up.
 	 */
 	public void setAnimatedScaleValues(Pair<Float, Float> newValues)
 	{
@@ -1320,11 +1338,31 @@ public abstract class TiUIView
 	}
 
 	/**
+	 * Retrieve the saved translate animation x & y deltas, which we store here since Android provides no property
+	 * for looking them up.
+	 */
+	public Pair<Integer, Integer> getAnimatedXYTranslationValues()
+	{
+		return animatedXYTranslationValues;
+	}
+
+	/**
+	 * Store the translate animation x and y delta values
+	 * since Android provides no property for looking them up.
+	 */
+	public void setAnimatedXYTranslationValues(Pair<Integer, Integer> newValues)
+	{
+		animatedXYTranslationValues = newValues;
+	}
+
+	/**
 	 * "Forget" the values we save after scale and rotation animations.
 	 */
 	private void resetPostAnimationValues()
 	{
 		animatedRotationDegrees = 0f; // i.e., no rotation.
 		animatedScaleValues = Pair.create(Float.valueOf(1f), Float.valueOf(1f)); // 1 means no scaling
+		animatedXYTranslationValues = Pair.create(Integer.valueOf(0), Integer.valueOf(0));
 	}
+
 }
